# shuffle-data

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yaml
images/: sample.xlsx
sample-images/: sample-missing_filename.xlsx  sample-wrong_filename.xlsx  sample.xlsx
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
