[package]
name = "shuffle-data"
version = "0.0.3"
description = "Shuffle data for blind"
authors = ["ARA Toshiaki"]
license = "MIT LICENSE"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-message", "dialog-open", "fs-copy-file", "fs-exists", "fs-read-dir", "path-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.19.1"
rand = "0.8.5"
rust_xlsxwriter = "0.29.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip="symbols"
# strip = true  # Automatically strip symbols from the binary.
